syntax = "proto3";

package warpdrive;

// only being used by cli and/or UI if available
service Command {
  // UplaodRelease build the release object and send it with header
  // and sends the list of upgrades.
  rpc UploadRelease(stream Chunck) returns (Release){}
}

// only being used by mobile devices
service Query {
  // the folowing four fields must be presented in Release object 
  // `Release.id`, `Release.app`, `Release.platform`, `Release.rolloutAt`
  // when client need to know the next Release
  rpc GetUpgrade(Release) returns (Release){}
  rpc DownloadRelease(Release) returns (stream Chunck){}
}

enum Platform {
  UNKNOWN = 0;
  IOS = 1;
  ANDROID = 2;
}

// Release can be duplicate for different rollout.
// for example, bundle can be released under beta for App1 and then
// it needs to be pushed again to be rollout as production. behind the scene both records are
// using the same bundle binary but they are tragetign two sets of people.
message Release {
  // @inject_tag: storm:"id,increment"
  uint64 id = 1;
  // @inject_tag: storm:"index"
  string app = 2;
  // this is just for label. it's not unique
  // becuase you might want to rollback
  // @inject_tag: storm:"index"
  string version = 3;
  string notes = 4;
  Platform platform = 5;
  // this is list of releases that can safely upgrade to this 
  // version.
  uint64 nextReleaseId = 6;
  // this is used as what kind of release is. As an example `beta`
  string rolloutAt = 7;
  // this is the hash value of bundle package
  // @inject_tag: storm:"index"
  string bundle = 8;
  // if the lock value is true, it means that this release can not be ultered or modified.
  // this is used to make sure the production doesn't download the unlock one.
  bool lock = 9;
  // @inject_tag: storm:"index"
  string createdAt = 10;
  // @inject_tag: storm:"index"
  string updatedAt = 11;
}

message Chunck {
  message Header {
    Release release = 1;
    string root = 2;
    string upgrade = 3;
  }

  message Body {
    bytes data = 1;
  }

  oneof value {
    Header header = 1;
    Body body = 2;
  }
}
